fix overflow bug in announcments

--- a/styles.css
+++ b/styles.css
@@ -217,6 +217,8 @@
 
 .announcment {
     border-bottom: 1px solid var(--light-grey);
+    overflow-y: hidden;
+    padding-bottom: 5px;
 }
 .announcment > p {
     color: var(--light-grey);
